[gd_scene load_steps=3 format=2]

[ext_resource path="res://scenes/entry_param.tscn" type="PackedScene" id=1]
[ext_resource path="res://scripts/ui/build_machine.gd" type="Script" id=2]

[node name="BuildMachine" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 2 )

[node name="CenterContainer" type="CenterContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0

[node name="PanelContainer" type="PanelContainer" parent="CenterContainer"]
margin_left = 312.0
margin_top = 150.0
margin_right = 712.0
margin_bottom = 450.0
rect_min_size = Vector2( 400, 300 )

[node name="VBoxContainer" type="VBoxContainer" parent="CenterContainer/PanelContainer"]
margin_left = 7.0
margin_top = 7.0
margin_right = 393.0
margin_bottom = 293.0

[node name="BaseLabel" parent="CenterContainer/PanelContainer/VBoxContainer" instance=ExtResource( 1 )]
anchor_right = 0.0
anchor_bottom = 0.0
margin_right = 386.0
margin_bottom = 48.0
size_flags_vertical = 3

[node name="ParamLabel" parent="CenterContainer/PanelContainer/VBoxContainer/BaseLabel" index="0"]
margin_top = 17.0
margin_right = 191.0
margin_bottom = 31.0
text = "Base"

[node name="SpinBox" parent="CenterContainer/PanelContainer/VBoxContainer/BaseLabel" index="1"]
margin_left = 195.0
margin_right = 386.0
margin_bottom = 48.0
value = 10.0

[node name="MantisseLabel" parent="CenterContainer/PanelContainer/VBoxContainer" instance=ExtResource( 1 )]
anchor_right = 0.0
anchor_bottom = 0.0
margin_top = 52.0
margin_right = 386.0
margin_bottom = 100.0
size_flags_vertical = 3

[node name="ParamLabel" parent="CenterContainer/PanelContainer/VBoxContainer/MantisseLabel" index="0"]
margin_top = 17.0
margin_right = 191.0
margin_bottom = 31.0
text = "Mantisse Len"

[node name="SpinBox" parent="CenterContainer/PanelContainer/VBoxContainer/MantisseLabel" index="1"]
margin_left = 195.0
margin_right = 386.0
margin_bottom = 48.0
value = 5.0

[node name="ExpMaxLabel" parent="CenterContainer/PanelContainer/VBoxContainer" instance=ExtResource( 1 )]
anchor_right = 0.0
anchor_bottom = 0.0
margin_top = 104.0
margin_right = 386.0
margin_bottom = 152.0
size_flags_vertical = 3

[node name="ParamLabel" parent="CenterContainer/PanelContainer/VBoxContainer/ExpMaxLabel" index="0"]
margin_top = 17.0
margin_right = 191.0
margin_bottom = 31.0
text = "Exp Max"

[node name="SpinBox" parent="CenterContainer/PanelContainer/VBoxContainer/ExpMaxLabel" index="1"]
margin_left = 195.0
margin_right = 386.0
margin_bottom = 48.0
value = 10.0

[node name="UseRounding" type="HBoxContainer" parent="CenterContainer/PanelContainer/VBoxContainer"]
margin_top = 156.0
margin_right = 386.0
margin_bottom = 204.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="ParamLabel" type="Label" parent="CenterContainer/PanelContainer/VBoxContainer/UseRounding"]
margin_top = 17.0
margin_right = 191.0
margin_bottom = 31.0
size_flags_horizontal = 3
size_flags_vertical = 6
text = "Use rounding"
align = 1
valign = 1

[node name="CheckBox" type="CheckBox" parent="CenterContainer/PanelContainer/VBoxContainer/UseRounding"]
margin_left = 195.0
margin_right = 386.0
margin_bottom = 48.0
size_flags_horizontal = 7
size_flags_vertical = 3

[node name="CreateButton" type="Button" parent="CenterContainer/PanelContainer/VBoxContainer"]
margin_top = 208.0
margin_right = 386.0
margin_bottom = 286.0
size_flags_horizontal = 3
size_flags_vertical = 3
size_flags_stretch_ratio = 1.6
text = "Build Machine"

[editable path="CenterContainer/PanelContainer/VBoxContainer/BaseLabel"]
[editable path="CenterContainer/PanelContainer/VBoxContainer/MantisseLabel"]
[editable path="CenterContainer/PanelContainer/VBoxContainer/ExpMaxLabel"]
